--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "autocanhas",
+  "name": "web",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@next/env": "^13.1.0",
+    "@sanity/client": "^3.4.1",
+    "@sanity/ui": "^1.0.4",
+    "@sanity/vision": "^3.0.0",
+    "next": "13.1.0",
+    "next-sanity": "^3.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "sanity": "^3.1.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "prettier": "latest",
-    "turbo": "latest"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "dependencies": {},
-  "packageManager": "pnpm@7.19.0"
+    "@babel/core": "^7.0.0",
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/node": "^17.0.12",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.13",
+    "eslint": "7.32.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.5.3"
+  }
 }
