--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
+    "eslint-config-next": "^13.1.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.5.3"
