--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/env": "^13.1.0",
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/ui": "^1.0.4",
     "@sanity/vision": "^3.0.0",
+    "classnames": "^2.3.2",
     "next": "13.1.0",
     "next-sanity": "^3.1.6",
     "react": "18.2.0",
