--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ coverage
 .next/
 out/
 build
+dist
 
 # misc
 .DS_Store
@@ -24,6 +25,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -31,3 +33,6 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+# Sanity
+.sanity
