--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/ui": "^1.0.4",
     "@sanity/vision": "^3.0.0",
+    "@types/react-image-gallery": "^1.2.0",
     "classnames": "^2.3.2",
     "next": "13.1.0",
     "next-sanity": "^3.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-is": "^18.2.0",
     "sanity": "^3.1.2",
     "styled-components": "^5.3.6"
