--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.2",
     "next": "13.1.0",
     "next-sanity": "^3.1.6",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image-gallery": "^1.2.11",
