--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@sanity/ui": "^1.0.4",
     "@sanity/vision": "^3.1.2",
     "@types/react-image-gallery": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "classnames": "^2.3.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "next": "13.1.1",
     "next-sanity": "^3.1.8",
     "query-string": "^8.1.0",
