--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sanity:deploy": "sanity deploy"
+    "sanity:deploy": "sanity deploy",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*{.tsx,.ts,.css}": [
+      "eslint . --fix",
+      "prettier --write ."
+    ]
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -48,6 +55,8 @@
     "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
