--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "sanity:deploy": "sanity deploy",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:e2e": "playwright test"
   },
   "lint-staged": {
     "**/*{.tsx,.ts,.css}": [
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
+    "@playwright/test": "^1.29.1",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
