--- a/.github/workflows/2e2.yaml
+++ b/.github/workflows/2e2.yaml
@@ -1,17 +1,19 @@
 # We are using Playwright but you may use your E2E framework of choice
 name: Playwright Tests
 
-on:
-  deployment_status:
-    
+on: [deployment_status]
+jobs:
   run-e2es:
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: npm ci && npx playwright install --with-deps
-    - name: Run tests
+      - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.20.0
+      - name: Install dependencies
+        run: pnpm i && npx playwright install --with-deps
+      - name: Run tests
         run: npx playwright test
-          env:
-              BASE_URL: ${{ github.event.deployment_status.target_url }}
+        env:
+          BASE_URL: ${{ github.event.deployment_status.target_url }}
