--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-playwright": "^0.11.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
