--- a/package.json
+++ b/package.json
@@ -18,51 +18,51 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.1",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/env": "^13.1.1",
-    "@next/font": "^13.1.1",
-    "@sanity/client": "^4.0.0",
-    "@sanity/image-url": "^1.0.1",
-    "@sanity/ui": "^1.0.11",
-    "@sanity/vision": "^3.1.4",
-    "classnames": "^2.3.2",
-    "next": "13.1.1",
-    "next-sanity": "^3.1.9",
-    "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-image-gallery": "^1.2.11",
-    "react-is": "^18.2.0",
-    "sanity": "^3.1.4",
-    "slugify": "^1.6.5",
-    "styled-components": "^5.3.6"
+    "@next/env": "^14.2.3",
+    "@sanity/client": "^6.18.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^2.1.7",
+    "@sanity/vision": "^3.41.1",
+    "classnames": "^2.5.1",
+    "next": "14.2.3",
+    "next-sanity": "^9.0.15",
+    "query-string": "^9.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-image-gallery": "^1.3.0",
+    "react-is": "^18.3.1",
+    "sanity": "^3.41.1",
+    "sanity-plugin-media": "^2.2.5",
+    "slugify": "^1.6.6",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@playwright/test": "^1.29.1",
-    "@sanity/eslint-config-studio": "^2.0.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-image-gallery": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.31.0",
+    "@babel/core": "^7.24.5",
+    "@playwright/test": "^1.44.0",
+    "@sanity/eslint-config-studio": "^4.0.0",
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-image-gallery": "^1.2.4",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "9.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-playwright": "^0.11.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^1.6.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
