--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^2.1.7",
     "@sanity/vision": "^3.41.1",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "classnames": "^2.5.1",
     "next": "14.2.3",
     "next-sanity": "^9.0.15",
