--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-dom": "18.3.1",
     "react-image-gallery": "^1.3.0",
     "react-is": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "sanity": "^3.41.1",
+    "sanity-plugin-markdown": "^4.1.2",
     "sanity-plugin-media": "^2.2.5",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.11"
